# DocAI

./: .gitignore  README.md  config_template.json  pyproject.toml
doc_ai/: first_run.py  main.py
doc_ai/clients/: base_llm_client.py  bedrock_client.py  openai_vision_client.py  sqlite_client.py  vdb_client.py
doc_ai/configs/: categories.json  config_template.json  prompts_template.py  tags_template.json
doc_ai/processors/: directory_processor.py  document_processor.py  ocr.py
doc_ai/utils/: general.py  items_manager.py
doc_manager/: directory_processor.py  document_processor.py  items_manager.py  logger_setup.py  main.py  models.py  prompt.py  vdb_client.py
doc_manager/factories/: llm_factory.py
doc_manager/llm_models/: base_llm.py  bedrock.py
doc_manager/processors/: ocr.py
doc_manager/utils/: db.py  img.py  pdf_to_img.py
docker/: docker-compose.yml
